# django_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: about.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
blog/templates/blog/base/: base.html
django_project/: settings.py  urls.py
users/: models.py  signals.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_image.py  0003_alter_profile_image.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
