[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["Lemuel Centeno <lemuelcenteno28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
